# rate-design-platform

./: .devpodignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  ISSUE_MESSAGE.md  Justfile  LICENSE  PR_MESSAGE.md  README.md  _quarto.yml  mkdocs.yml  pyproject.toml  run_tou_scenarios.py  typos.toml  uv.lock.backup
.cursor/commands/: extract-pdf-to-markdown.md  validate-pdf-to-markdown-extraction.md
.devcontainer/: Dockerfile  devcontainer.json  install-prek-deps.sh  install-python-deps.sh  postCreateCommand.sh
.devcontainer/devpod/: aws.sh  up-aws-list.sh  up-aws.sh  up-local.sh
.github/ISSUE_TEMPLATE/: switchbox-issue-template.md  switchbox-issue-template.yaml
.github/workflows/: ci-runner-native.yml  docs.yml  main.yml  release-test.yml  release.yml
.prek-cache/: README
context/: README.md
context/docs/: cambium_2024.md  census_pums_acs1_2022_data_dict.txt  census_pums_acs1_2023_data_dict.txt  census_pums_acs1_2023_user_guide.md  census_pums_acs1_2024_data_dict.txt  census_pums_acs1_2024_user_guide.md  census_pums_acs5_2021_data_dict.txt  census_pums_acs5_2022_data_dict.txt  census_pums_acs5_2023_data_dict.txt  census_pums_acs5_2023_user_guide.md  nyiso_gold_book_2025_proposed_transmission_facilities.md  resstock_2024.2.md
context/domain/: bat_reasoning_stress_test.md  coned_el1_charges_in_bat.md  cost_reflective_tou_rate_design.md  fairness_in_cost_allocation.md  lmi_discounts_in_ny.md  lmi_discounts_in_ri.md  ny_bulk_transmission_cost_recovery.md  ny_dist_mc_bat_methodology.md  ny_genability_charge_fetch_map.md  ny_mcos_studies_comparison.md  ny_residential_charges_in_bat.md  psegli_revenue_requirement_estimation.md  ri_bulk_transmission_marginal_cost.md  ri_residential_charges_in_bat.md
context/methods/: adjust_mf_electricity_loads.md  approximate_non_hp_loads.md  reweight_customer_counts.md
context/papers/: nyiso_gold_book_2025.md
context/plans/: 2026-02-23-cairo-speedup-design.md  2026-02-23-cairo-speedup-plan.md  2026-02-27-bulk-tx-costs.md  (+4 more)
data/: README.md  __init__.py  bldg0000072-up03_monthly_results.csv  default_monthly_bills_and_comfort_penalties.csv  tou_monthly_bills_and_comfort_penalties.csv
data/eia/: utils.py  (+2 more)
docs/: HP_and_HPWH_controls.qmd  README.md  cairo-gas-double-conversion-bug.md  cross_subsization_review.html  cross_subsization_review.qmd  cross_subsization_review.tex  docs_tou_ev_schedule_value_learning.html  docs_tou_ev_schedule_value_learning.md  docs_tou_ev_schedule_value_learning.qmd  docs_tou_hpwh_schedule_basic.html  docs_tou_hpwh_schedule_basic.md  docs_tou_hpwh_schedule_basic.qmd  docs_tou_hpwh_schedule_value_learning.html  docs_tou_hpwh_schedule_value_learning.qmd  docs_tou_hvac_hp_schedule_value_learning.qmd  gas-tariff-fetch-rateacuity-checklist.md  lmi_discounts_in_ri.md  modules.md  ref.bib  water_demand_timeseries.md  water_demand_timeseries.qmd
infra/: README.md  create-volume.sh  dev-login.sh  dev-setup.sh  dev-start.sh  dev-stop.sh  dev-teardown-all.sh  dev-teardown.sh  first-login.sh  main.tf  outputs.tf  user-data.sh  variables.tf
mkdocs_plugins/: qaurto_render.py
notebooks/: test.qmd
outputs/: ochre.json  ochre_Clothes Dryer_events.csv  ochre_Clothes Washer_events.csv  ochre_Cooking Range_events.csv  ochre_Dishwasher_events.csv
rate_design_platform/: Analysis.py  DecisionMaker.py  OchreSimulator.py  batch_run.py  first_pass.py  ochre_simulation.py  plot_water_demand.py  plotting.py  second_pass.py
scripts/: validate_gas_tariff_maps.py
src/: first_pass.py  plot_water_demand.py
tests/: conftest.py  test_add_vulnerability_columns.py  test_adjust_mf_electricity.py  test_analysis.py  test_approximate_non_hp_load.py  test_assign_utility_ny.py  test_basic.py  test_bill_decomposition.py  test_bsf_to_cairo.py  test_buildstock_fetch.py  test_bulk_tx_mc.py  test_cairo.py  test_cambium_dist_mc.py  test_compare_cairo_runs.py  test_compare_resstock_eia861_loads.py  test_compute_fair_default_feasible_line.py  test_compute_fair_default_inputs.py  test_compute_rr.py  test_compute_tou.py  test_copy_calibrated_tariff_from_run.py  test_copy_tariff_variants.py  test_create_aggregate_hourly_loads.py  test_create_default_structure_tariffs.py  test_create_fair_default_tariff.py  test_create_flat_discount_tariff.py  test_create_flat_tariff_script.py  test_create_revenue_yaml.py  test_create_scenario_yamls.py  test_create_tariff.py  test_decision_maker.py  test_demand_flex.py  test_derive_seasonal_tou.py  test_derive_seasonal_tou_window.py  test_derive_tx_values.py  test_electric_tariff_mapper.py  test_end_to_end_cairo.py  test_fetch_eia861_utility_stat_parquets.py  test_fetch_electric_utility_stat_parquets.py  test_fetch_gas_tariffs_rateacuity.py  test_fetch_monthly_rates.py  (+60 more)
utils/: Justfile  __init__.py  aggregate_eia_utility_loads.py  assign_utility_ny.py  bsf_to_cairo.py  buildstock.py  buildstock_io.py  cairo.py  create_flat_tariff.py  demand_flex.py  eia_region_config.py  electric_tariff_mapper.py  fetch_eia_zone_loads.py  file_io.py  gas_tariff_mapper.py  generate_precalc_mapping.py  generate_utility_tx_dx_mc.py  get_utility_stats_from_eia861.py  identify_heating_type.py  identify_hp_customers.py  loads.py  mixed_adoption_trajectory.py  reweight_customer_counts.py  reweight_resstock_customers_by_utility.py  s3_sync.py  scenario_config.py  types.py  utility_assginment.ri.py  utility_assignment_ny.py  utility_assignment_ri.py  utility_codes.py
(+2665 files in other folders)
