[project]
name = "rate-design-platform"
version = "0.0.0"
description = "Simulation platform for electrical rate design."
authors = [{ name = "Switchbox", email = "hello@switch.box" }]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "buildstock-fetch>=1.6.1",
    "cairo",
    "cloudpathlib[s3]>=0.23.0",
    "numpy",
    "polars",
    "prek>=0.3.2",
    "pyarrow",
]

[project.urls]
Repository = "https://github.com/switchbox-data/rate-design-platform"

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "ruff>=0.11.5",
    "ty>=0.0.1a21",
    "deptry>=0.20.0",
    "ipykernel>=7.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["rate_design*", "utils*"]

[tool.setuptools.package-data]
"rate_design.ny.hp_rates" = [
    "scenarios/*.yaml",
    "data/tariff_structure/*.json",
    "data/tariff_mapping/*.csv",
]

[tool.uv.sources]
cairo = { git = "https://github.com/NatLabRockies/CAIRO", rev = "9b52c91" }
