[project]
name = "rate-design-platform"
version = "0.0.0"
description = "Simulation platform for electric rate design."
authors = [{ name = "Switchbox", email = "hello@switch.box" }]
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "buildstock-fetch>=1.6.1",
    "cairo",
    "google-auth>=2.0.0",
    "gspread>=6.0.0",
    "python-dotenv>=1.0.0",
    "cloudpathlib[s3]>=0.23.0",
    "geopandas>=1.0.0",
    "numpy",
    "pandas",
    "polars",
    "prek>=0.3.2",
    "pyarrow",
    "pygris>=0.2.1",
    "s3fs>=2026.2.0",
    "cloudpathlib>=0.23.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "sodapy>=2.2.0",
    "questionary>=2.1.1",
    "rich>=14.3.2",
    "tqdm>=4.67.3",
    "python-calamine>=0.6.1",
    "fastexcel>=0.19.0",
    "tariff-fetch>=1.1.0",
    "matplotlib>=3.8.0",
    "scipy>=1.11.0",
    "openpyxl>=3.1.5",
    "gridstatus>=0.34.0",
    "pytz>=2025.2",
    "scikit-learn>=1.8.0",
    "ruamel-yaml>=0.19.1",
    "prefect>=3.7.8",
]

[project.urls]
Repository = "https://github.com/switchbox-data/rate-design-platform"
Changelog = "https://github.com/switchbox-data/rate-design-platform/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "ruff>=0.11.5",
    "ty>=0.0.1a21",
    "deptry>=0.20.0",
    "ipykernel>=7.1.0",
    "plotnine>=0.14.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["data*", "rate_design*", "utils*"]

[tool.setuptools.package-data]
"rate_design.ny.hp_rates" = [
    "scenarios/*.yaml",
    "config/tariffs/electric/*.json",
    "config/tariffs/gas/*.json",
    "config/tariff_maps/electric/*.csv",
    "config/tariff_maps/gas/*.csv",
]
"rate_design.ri.hp_rates" = [
    "config/tariffs/electric/*.json",
    "config/tariffs/gas/*.json",
    "config/tariff_maps/electric/*.csv",
    "config/tariff_maps/gas/*.csv",
]
"utils.post" = ["data/*.yaml"]

[tool.ty.src]
exclude = [".cache/"]

[tool.uv.sources]
cairo = { git = "https://github.com/natlabrockies/cairo", rev = "09a4d7f" }
